Entregable 2 completo a falta de depurar